--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Feather Icons",
-  "id": "744047966581015514",
+  "name": "Heroicons",
+  "id": "876119978690687541",
   "api": "1.0.0",
   "ui": "build/ui.html",
   "main": "build/main.js"
